Fixing wrong color

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,7 +28,7 @@
         font-weight: bold;
 }
 .accepted {
-    color: #00dd00;
+    color: #009900;
     font-weight: bold;
 }
 
